# BMSTU_Chatbot_2sem

./: AuthManager.cpp  AuthManager.h  CMakeLists.txt  Headers.h  main.cpp
Database/: users.txt
Entity/qa/: QA.cpp  QA.h
Entity/user/: User.cpp  User.h
Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h
User/: User.cpp  User.h  UserServices.cpp  UserServices.h
Utils/: Mapper.cpp  Mapper.h  Utilities.cpp  Utilities.h
Utils/qa/: QAMapper.h
Utils/user/: UserMapper.cpp  UserMapper.h
service/history/: HistoryService.cpp  HistoryService.h
service/qa/: QAService.cpp  QAService.h
service/user/: UserService.cpp  UserService.h  UserServices.cpp  UserServices.h
src/: main.cpp
src/Entity/history/: History.cpp  History.h
src/Entity/parent/: Client.h
src/Entity/qa/: QA.cpp  QA.h
src/Entity/user/: User.cpp  User.h
src/auth/: AuthManager.h
src/customized/: GenericVector.cpp  GenericVector.h  MyGenericVector.h
src/exception/service/: QANotFoundException.h
src/helpers/mappers/history/: HistoryMapper.cpp  HistoryMapper.h
src/helpers/mappers/qa/: QAMapper.h
src/helpers/mappers/user/: UserMapper.h
src/helpers/utils/: Utilities.h
src/service/history/: HistoryService.cpp  HistoryService.h
src/service/qa/: QAService.cpp  QAService.h
src/service/user/: UserService.cpp  UserService.h
